# visualization-toolkit

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: nightly-build-and-publish.yml  publish-to-pypi.yml
examples/: boxplolts.ipynb  mse_noise.ipynb
src/visualization_toolkit/: config.py
src/visualization_toolkit/adapters/: mse_experiment.py  mse_noise.py
src/visualization_toolkit/core/: aggregation.py
src/visualization_toolkit/localization/: en.py  ru.py
src/visualization_toolkit/metrics/: mse.py
src/visualization_toolkit/plots/: _boxplot_utils.py  _broken_axis.py  boxplot.py  mse.py
src/visualization_toolkit/styles/: boxplot.py  line.py
tests/: test_translations.py
