[project]
name = "visualization-toolkit"
# version = "0.0.1rc1"
dynamic = ["version"]
description = ""
license = "Apache-2.0"
authors = [
    {name = "Aleksandr Sinitca",email = "siniza.s.94@gmail.com"},
    {name = "Asya Lyanova", email = "lyanova.ai@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[project.urls]
Repository = "https://github.com/Digiratory/visualization-toolkit.git"

[tool.poetry]
packages = [{include = "visualization_toolkit", from = "src"}]


[build-system]
requires = [
    "poetry-core>=2.0.0,<3.0.0", 
    "setuptools>=80",
    "setuptools-scm>=8",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_file = "src/visualization_toolkit/_version.py"
tag_regex = "^release/(.+?)(?:-.+)?$"
version_scheme = "release-branch-semver"
